Make sure generation 2.0 modal is not behind site header. Add animation for tabs.

--- a/docs/sass/style.scss
+++ b/docs/sass/style.scss
@@ -608,7 +608,10 @@ $bp-border-color: #d8d8d8;
       }
 
       + .bp-tabs__content {
-        display: block;
+        opacity: 1;
+        visibility: visible;
+        height: auto;
+        padding-bottom: 25px;
       }
     }
   }
@@ -666,14 +669,16 @@ $bp-border-color: #d8d8d8;
 }
 
 .bp-tabs__content {
-  padding-bottom: 25px;
-  display: none;
+  padding-bottom: 0;
+  height: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.4s, opacity 0.4s, padding-bottom 0.4s, height 0.4s;
 
   @media #{$m-query} {
     order: 99;
     flex-grow: 1;
     width: 100%;
-    display: none;
     font-size: 16px;
   }
 }
@@ -829,10 +834,10 @@ $bp-border-color: #d8d8d8;
 // generation 2.0 popup
 .bp-modal {
   position: fixed;
-  top: 0;
+  top: 105px;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 104px);
   padding: 24px;
   background: rgba(0, 0, 0, 0.5);
   opacity: 0;
